introduce complain message format.

--- a/yabeda.conf
+++ b/yabeda.conf
@@ -2,3 +2,4 @@ disProc=.+\/0$
 hostNameAllowedRegex=.+
 hostNameSuffix=.cryo.net.ru
 timeFormat=%H:%M:%S %d-%m-%Y
+messageFormat=%s: CT %s on %s: %s changed from %s to %s.\n
