Introduce alert dispatcher and e-mail alerting (harcoded by now).

--- a/yabeda.conf
+++ b/yabeda.conf
@@ -2,4 +2,5 @@ disProc=.+\/0$
 hostNameAllowedRegex=.+
 hostNameSuffix=.cryo.net.ru
 timeFormat=%H:%M:%S %d-%m-%Y
-messageFormat=%s: CT %s on %s: %s changed from %s to %s.\n
+messageFormat=%s: CT %s on %s: %s changed from %s to %s.
+enabledModules=console,email
