--- a/yabeda.conf
+++ b/yabeda.conf
@@ -1,6 +1,7 @@
-disProc=.+\/0$
-hostNameAllowedRegex=.+
-hostNameSuffix=.cryo.net.ru
-timeFormat=%H:%M:%S %d-%m-%Y
-messageFormat=%s: CT %s on %s: %s changed from %s to %s.
-enabledModules=console,email
+debug=true
+disallowed_proc=.+\/0$
+hostname_allowedregex=.+
+hostname_suffix=.cryo.net.ru
+time_format=%H:%M:%S %d-%m-%Y
+message_format=%s: CT %s on %s: %s changed from %s to %s.
+enabled_modules=console,email
