--- a/yabeda.conf
+++ b/yabeda.conf
@@ -5,3 +5,7 @@ hostname_suffix=.cryo.net.ru
 time_format=%H:%M:%S %d-%m-%Y
 message_format=%s: CT %s on %s: %s changed from %s to %s.
 enabled_modules=console,email
+mail_from=Yabeda OVZ watcher <yabeda@cryo.net.ru>
+mail_to=pavlov.konstantin@gmail.com
+mail_subject=Problem detected!
+
