Use ./yabeda.conf if there's no system-wide yabeda config.

--- a/yabeda.conf
+++ b/yabeda.conf
@@ -4,7 +4,7 @@ hostname_allowedregex=.+
 hostname_suffix=.cryo.net.ru
 time_format=%H:%M:%S %d-%m-%Y
 message_format=%s: CT %s on %s: %s changed from %s to %s.
-enabled_modules=console,email
+enabled_modules=console
 mail_from=Yabeda OVZ watcher <yabeda@cryo.net.ru>
 mail_to=pavlov.konstantin@gmail.com
 mail_subject=Problem detected!
