Introduce subject_format. Fix a bit body.

--- a/yabeda.conf
+++ b/yabeda.conf
@@ -2,10 +2,8 @@ debug=true
 disallowed_proc=.+\/0$
 hostname_allowedregex=.+
 hostname_suffix=.cryo.net.ru
-time_format=%H:%M:%S %d-%m-%Y
+time_format=%d-%m-%Y %H:%M:%S
 message_format=%s: CT %s on %s: %s changed from %s to %s.
-enabled_modules=console
+enabled_modules=email
 mail_from=Yabeda OVZ watcher <yabeda@cryo.net.ru>
 mail_to=pavlov.konstantin@gmail.com
-mail_subject=Problem detected!
-
