Add a missing word.

--- a/yabeda.conf
+++ b/yabeda.conf
@@ -3,7 +3,7 @@ disallowed_proc=.+\/0$
 hostname_allowedregex=.+
 hostname_suffix=.cryo.net.ru
 time_format=%d-%m-%Y %H:%M:%S
-message_format=%s: CT %s on %s: %s changed from %s to %s.
+message_format=%s: CT %s on %s: %s failcnt changed from %s to %s.
 enabled_modules=email
 mail_from=Yabeda OVZ watcher <yabeda@cryo.net.ru>
 mail_to=pavlov.konstantin@gmail.com
