No need to publish emails.

--- a/yabeda.conf
+++ b/yabeda.conf
@@ -5,5 +5,5 @@ hostname_suffix=.cryo.net.ru
 time_format=%d-%m-%Y %H:%M:%S
 message_format=%s: CT %s on %s: %s failcnt changed from %s to %s.
 enabled_modules=email
-mail_from=Yabeda OVZ watcher <yabeda@cryo.net.ru>
-mail_to=pavlov.konstantin@gmail.com
+mail_from=Yabeda OVZ watcher <insert@lame-name.here>
+mail_to=foobar@domain.tld
