--- a/yabeda.conf
+++ b/yabeda.conf
@@ -7,3 +7,8 @@ message_format=%s: CT %s on %s: %s failcnt changed from %s to %s.
 enabled_modules=email
 mail_from=Yabeda OVZ watcher <insert@lame-name.here>
 mail_to=foobar@domain.tld
+mysql_user=yabeda
+mysql_password=yabeda
+mysql_host=localhost
+mysql_database=yabeda
+mysql_table=stats
