--- a/yabeda.conf
+++ b/yabeda.conf
@@ -1,14 +1,15 @@
-debug=true
-disallowed_proc=.+\/0$
-hostname_allowedregex=.+
-hostname_suffix=.cryo.net.ru
-time_format=%d-%m-%Y %H:%M:%S
-message_format=%s: CT %s on %s: %s failcnt changed from %s to %s.
-enabled_modules=email
-mail_from=Yabeda OVZ watcher <insert@lame-name.here>
-mail_to=foobar@domain.tld
-mysql_user=yabeda
-mysql_password=yabeda
-mysql_host=localhost
-mysql_database=yabeda
-mysql_table=stats
+---
+:debug: true
+:disallowed_proc: .+\/0$
+:hostname_allowedregex: .+
+:hostname_suffix: .cryo.net.ru
+:time_format: "%d-%m-%Y %H:%M:%S"
+:message_format: "%s: CT %s on %s: %s failcnt changed from %s to %s."
+:enabled_modules: email
+:mail_from: Yabeda OVZ watcher <insert@lame-name.here>
+:mail_to: foobar@domain.tld
+:mysql_user: yabeda
+:mysql_password: yabeda
+:mysql_host: localhost
+:mysql_database: yabeda
+:mysql_table: stats
