Added configdump command to produce default config file. Provide default config file produced by it.

--- a/yabeda.conf
+++ b/yabeda.conf
@@ -1,15 +1,25 @@
----
-:debug: true
-:disallowed_proc: .+\/0$
-:hostname_allowedregex: .+
-:hostname_suffix: .cryo.net.ru
-:time_format: "%d-%m-%Y %H:%M:%S"
+--- 
+:jabber_password: bot
 :message_format: "%s: CT %s on %s: %s failcnt changed from %s to %s."
-:enabled_modules: email
-:mail_from: Yabeda OVZ watcher <insert@lame-name.here>
-:mail_to: foobar@domain.tld
+:mysql_db: yabeda
+:debug: true
+:jabber_to: 
+- admin@localhost
+- monitoring@localhost
+:enabled_modules: console
 :mysql_user: yabeda
+:disallowed_proc: .+/0$
+:mail_from: Yabeda OVZ watcher <insert@lame-name.here>
 :mysql_password: yabeda
-:mysql_host: localhost
-:mysql_database: yabeda
+:hostname_allowedregex: .+
+:mail_to: 
+- foobar@domain.tld
+- baz@domain.tld
 :mysql_table: stats
+:hostname_suffix: .cryo.net.ru
+:subject_format: "VPS%d: %s failcnt -> %s!"
+:configfile: /etc/yabeda/yabeda.conf
+:jabber_jid: bot@localhost/bot
+:time_format: "%H:%M:%S %d-%m-%Y"
+:mysql_host: localhost
+:statefile: /var/lib/yabeda/state
