Use 'enabled' config directive to tell yabeda if you really want your system to be checked.

--- a/yabeda.conf
+++ b/yabeda.conf
@@ -1,4 +1,8 @@
 --- 
+:jabber_jid: bot@localhost/bot
+:time_format: "%H:%M:%S %d-%m-%Y"
+:mysql_host: localhost
+:statefile: /var/lib/yabeda/state
 :jabber_password: bot
 :message_format: "%s: CT %s on %s: %s failcnt changed from %s to %s."
 :mysql_db: yabeda
@@ -15,11 +19,8 @@
 :mail_to: 
 - foobar@domain.tld
 - baz@domain.tld
+:enabled: false
 :mysql_table: stats
 :hostname_suffix: .cryo.net.ru
 :subject_format: "VPS%d: %s failcnt -> %s!"
 :configfile: /etc/yabeda/yabeda.conf
-:jabber_jid: bot@localhost/bot
-:time_format: "%H:%M:%S %d-%m-%Y"
-:mysql_host: localhost
-:statefile: /var/lib/yabeda/state
