--- a/yabeda.conf
+++ b/yabeda.conf
@@ -1,21 +1,23 @@
 --- 
-:jabber_jid: bot@localhost/bot
+:alive_notify: false
 :time_format: "%H:%M:%S %d-%m-%Y"
 :mysql_host: localhost
 :statefile: /var/lib/yabeda/state
-:jabber_password: bot
+:events_table: events
 :message_format: "%s: CT %s on %s: %s failcnt changed from %s to %s."
 :mysql_db: yabeda
 :debug: true
-:jabber_to: 
-- admin@localhost
-- monitoring@localhost
+:jabber_jid: bot@localhost/bot
 :enabled_modules: console
 :mysql_user: yabeda
 :disallowed_proc: .+/0$
+:jabber_password: bot
 :mail_from: Yabeda OVZ watcher <insert@lame-name.here>
 :mysql_password: yabeda
 :hostname_allowedregex: .+
+:jabber_to: 
+- admin@localhost
+- monitoring@localhost
 :mail_to: 
 - foobar@domain.tld
 - baz@domain.tld
