--- a/yabeda.conf
+++ b/yabeda.conf
@@ -1,28 +1,29 @@
 --- 
-:alive_notify: false
-:time_format: "%H:%M:%S %d-%m-%Y"
-:mysql_host: localhost
-:statefile: /var/lib/yabeda/state
-:events_table: events
-:message_format: "%s: CT %s on %s: %s failcnt changed from %s to %s."
-:mysql_db: yabeda
-:debug: true
-:jabber_jid: bot@localhost/bot
-:enabled_modules: console
-:mysql_user: yabeda
-:disallowed_proc: .+/0$
-:jabber_password: bot
-:mail_from: Yabeda OVZ watcher <insert@lame-name.here>
 :mysql_password: yabeda
-:hostname_allowedregex: .+
+:hostname_suffix: .cryo.net.ru
 :jabber_to: 
 - admin@localhost
 - monitoring@localhost
+:subject_format: "VPS%d: %s failcnt increased!"
+:configfile: /etc/yabeda/yabeda.conf
+:mysql_table: stats
+:time_format: "%H:%M:%S %d-%m-%Y"
+:mysql_host: localhost
+:statefile: /var/lib/yabeda/state
+:alive_notify: false
+:message_format: "%s: CT %s on %s: %s failcnt changed from %s to %s."
+:mysql_db: yabeda
+:debug: true
+:events_table: events
+:enabled_modules: console
+:mysql_port: "3306"
+:disallowed_proc: .+/0$
+:jabber_jid: bot@localhost/bot
+:mail_from: Yabeda OVZ watcher <insert@lame-name.here>
+:mysql_user: yabeda
+:hostname_allowedregex: .+
+:jabber_password: bot
 :mail_to: 
 - foobar@domain.tld
 - baz@domain.tld
 :enabled: false
-:mysql_table: stats
-:hostname_suffix: .cryo.net.ru
-:subject_format: "VPS%d: %s failcnt -> %s!"
-:configfile: /etc/yabeda/yabeda.conf
