Imported original yabeda code

--- a/etc/jabeda.conf
+++ b/etc/jabeda.conf
@@ -19,7 +19,7 @@
 :mysql_port: "3306"
 :disallowed_proc: .+/0$
 :jabber_jid: bot@localhost/bot
-:mail_from: Yabeda OVZ watcher <insert@lame-name.here>
+:mail_from: Jabeda OVZ watcher <insert@lame-name.here>
 :mysql_user: yabeda
 :hostname_allowedregex: .+
 :jabber_password: bot
